Fix email link in Contact Me page

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 <div class="contact">
     <p>Get in Touch with Bugbear <i class="fa-solid fa-dove"></i></p>
 
-    <a href="prish2900@gmail.com" class="contact-item">
+        <a href="mailto:prish2900@gmail.com">Email</a>
         <i class="fas fa-envelope"></i> Email
     </a>
 
