Fix email link in Contact Me page

--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,7 @@
     </body>
 <div class="contact">
     <p>Get in Touch with Bugbear <i class="fa-solid fa-dove"></i></p>
-
-        <a href="mailto:prish2900@gmail.com">Email</a>
+    <a href="mailto:prish2900@gmail.com" target="_blank" class="contact-item">
         <i class="fas fa-envelope"></i> Email
     </a>
 
